--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -86,17 +86,54 @@ hr {
   background-color: #ddd;
   margin-left: 30px;
 }
-.left>section{
-  /* margin-top: 40px; */
-  /* margin-left: 30px; */
+
+.project{
+  position: relative;
+  width: 305px;
+  height: 240px;
+  float: left;
+  box-sizing: border-box;
+  
 }
-.img{
+.project>img{
   width: 305px;
   height: 240px;
   padding-left: 32px;
   padding-top: 40px;
+  float: left;
 }
+
+/* .project>h3{
+width: 273px;
+height: 50px;
+padding: 15px;
+margin-left: 32px;
+margin-bottom: 100px;
+margin-top: 100px;
+background-color: #4aaaa5;
+color: #fff;
+font-size: 22px;
+font-weight: 300;
+text-align: center;
+clear: both;
+ }  */
+
+ .project>h3{
+  position: absolute;
+  bottom: 20px;
+  width: 90%;
+  padding: 15px;
+  margin-bottom: 0;
+  margin-left: 25px;
+  line-height: 30px;
+  color: #fff;
+  background-color: #4aaaa5;
+  text-align: center;
+  border-bottom: 0;
+ }
+
 /* aside css codes started */
+
 .aside {
   width: 270px;
   height: 210px;
