--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -93,6 +93,7 @@ hr {
   height: 240px;
   float: left;
   box-sizing: border-box;
+
   
 }
 .project>img{
@@ -101,35 +102,23 @@ hr {
   padding-left: 32px;
   padding-top: 40px;
   float: left;
+  opacity: 0.7;
 }
-
-/* .project>h3{
-width: 273px;
-height: 50px;
-padding: 15px;
-margin-left: 32px;
-margin-bottom: 100px;
-margin-top: 100px;
-background-color: #4aaaa5;
-color: #fff;
-font-size: 22px;
-font-weight: 300;
-text-align: center;
-clear: both;
- }  */
 
  .project>h3{
   position: absolute;
-  bottom: 20px;
-  width: 90%;
+  bottom: 10px;
+  width: 273px;
   padding: 15px;
   margin-bottom: 0;
-  margin-left: 25px;
+  margin-left: 32px;
   line-height: 30px;
   color: #fff;
   background-color: #4aaaa5;
   text-align: center;
   border-bottom: 0;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 22px;
  }
 
 /* aside css codes started */
